--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Firebase Configuration
 # Replace these with your actual Firebase project configuration
-VITE_FIREBASE_API_KEY=your-api-key-here
-VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
-VITE_FIREBASE_APP_ID=1:123456789:web:abcdef
+VITE_FIREBASE_API_KEY=AIzaSyBBhCfocZ26gSi6mUG4fSBRuq-vjcZgxrE
+VITE_FIREBASE_AUTH_DOMAIN=secteurf20.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=secteurf20
+VITE_FIREBASE_STORAGE_BUCKET=secteurf20.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=1093705810466
+VITE_FIREBASE_APP_ID=1:1093705810466:web:cc5c4ba42468e7bf0c807b
 
 # Instructions:
 # 1. Copy this file to .env
